finish index.html page

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 	window.onload = load;
 </script> -->
+<!-- load/displays the modat form once the windows object loads -->
 <body onload="document.contacts.name.focus()">
 
 	<form id="add-contact" name="contacts">
